<?xml version="1.0"?>
<package>
  <name>eod_robot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for eod_robot_description</p>
    <p>This package contains configuration data, 3D models and launch files
for eod_robot_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend> 
  </export>

  <!--<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent/>
  </export>
<build_depend>std_msgs</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>controller_manager</build_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>message_generation</build_export_depend>
<build_export_depend>controller_manager</build_export_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>message_generation</exec_depend>
<exec_depend>controller_manager</exec_depend>-->

</package>